fixed background white spaces

--- a/style.css
+++ b/style.css
@@ -10,9 +10,13 @@ dl,
 dd {
   margin: 0px;
 }
+body {
+    background: #E5E5E5;
+}
 .navbar {
     width: 100%;
     height: 80px;
+    margin: 0px auto;
     background: #001636;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     justify-content: space-around;
@@ -25,7 +29,6 @@ dd {
 .pricing-table-container {
     font-family: 'HelveticaNeue', sans-serif;
     justify-content: center;
-    background: #E5E5E5;
     margin: 0px 0px;
 }
 .header {
